fix: touchend on svg and 100% height on map

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -49,7 +49,7 @@ body.rs-frontend {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
