fix: disable eventlisteners, try map pos fixed

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -46,7 +46,7 @@ body.rs-frontend {
 
 /************************** MAP ******************************************/
 #map {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
