fix: correct svg fixed pos now

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -423,7 +423,7 @@ h4.active {
 
 /************************** SVG OVERLAY ******************************************/
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
