--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -1,6 +1,10 @@
 /************************** GENERAL ******************************************/
 html {
     font-size: 16px;
+    padding:0;
+    margin:0;
+    height: 100%;
+    width: 100%;
 }
 
 body.rs-frontend {
@@ -186,7 +190,7 @@ h4.active {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
@@ -317,6 +321,7 @@ h4.active {
         top: auto;
         left: auto;
         width: 80vw;
+        height: auto;
         margin: 50px auto 25px auto;
         min-width: auto;
     }
