--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -20,7 +20,7 @@
 {% block body %}
 <div id="map"></div>
 
-<svg id="svg" class="overlay" width="100%" height="100%">
+<svg id="svg" class="overlay">
     <path id="svg-path" />
 </svg>
 
