feat: add emails for participate, new mapbox account

--- a/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
@@ -182,15 +182,22 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-12">
+                            <div class="form-group col-md-6">
                                 {{ form.titel.label }}
-                                {{ form.titel(class_="form-control" + (" is-invalid" if form.longitude.errors else ""), maxlength="25") }}
+                                {{ form.titel(class_="form-control" + (" is-invalid" if form.titel.errors else ""), maxlength="25") }}
                                 {% for error in form.titel.errors %}
                                 <div class="invalid-feedback" style="display:block">{{error}}</div>
                                 {% endfor %}
                                 <small id="titelhelp" class="form-text text-muted"><span id="current_titel">0</span>/ 25</small>
-                            </div
-                        ></div>
+                            </div>
+                            <div class="form-group col-md-6">
+                                {{ form.language.label }}
+                                {{ form.language(class_="form-control" + (" is-invalid" if form.language.errors else "")) }}
+                                {% for error in form.language.errors %}
+                                <div class="invalid-feedback" style="display:block">{{error}}</div>
+                                {% endfor %}
+                            </div>
+                        </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 {{ form.bild_stein.label }}
