--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -512,23 +512,32 @@ h4.active {
 @media only screen and (max-width: 1025px) {
 
     #rs-small-navigation a:first-child {
-        margin-top: 50px;
+        margin-top: 52px;
     }
 
     #rs-small-home img {
-        height: 25px;
+        height: 28px;
     }
+
     #rs-small-menu img {
-        height: 15px;
+        height: 18px;
     }
+
     #rs-small-navigation span a {
         font-size: 1rem;
     }
+
     .rs-close {
         top: 10px;
         right: 20px;
-        width: 30px;
-        height: 30px;
+        width: 33px;
+        height: 33px;
+    }
+    #rs-small-navigation span {
+        padding-top: 10px;
+    }
+    #rs-small-navigation a {
+        margin-top: 1px;
     }
 }
 
@@ -898,7 +907,7 @@ h4.active {
     top: 0;
     right: 0;
     z-Index: 4;
-    width: 60vw;
+    width: auto;
     text-align: right;
     margin-top: 25px;
     margin-right: 50px;
@@ -961,12 +970,13 @@ h4.active {
 #rs-about-impressum {
     position: absolute;
     top: 20vh;
-    left: 60vw;
+    left: 63vw;
     width: 20vw;
-    padding-top: 20vw;
+    padding-top: 18vw;
     z-index: 3;
     text-align: center;
 }
+
 #rs-about-impressum h3 {
     font-size: 1.7rem;
     line-height: 1.3;
@@ -1017,7 +1027,7 @@ h4.active {
     }
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+@media only screen and (min-width: 1025px) and (max-height: 750px) {
     #rs-about-impressum h3 {
         font-size: 1.6rem;
         line-height: 1.2;
@@ -1030,9 +1040,10 @@ h4.active {
 
     #rs-about {
         width: 45vw;
-        height: 95vh;
+        height: 85vh;
         overflow-y: scroll;
         overflow-x: hidden;
+        padding-right: 10px;
     }
 
     .rs-about-logos img {
@@ -1059,9 +1070,9 @@ h4.active {
         background: #555; 
     }
     
-    #rs-about .rs-copyright {
+    /* #rs-about .rs-copyright {
         display: none;
-    }
+    } */
 }
 
 @media only screen and (max-width: 1025px) {
