--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -7,7 +7,8 @@
 
 <div id="rs-title">
     <p>{{_('Reisesteine')}}</p>
-    <p>{{_('Eine interaktive virtuelle Ausstellung von')}} <b><i>focus</i>&#8239;Terra</b></p>
+    <p>{{_('Eine')}} <b><i>focus</i>&#8239;Terra</b>-Ausstellung zum Mitmachen</p>
+    <p style="margin-top: 10px">de <img src="{{ url_for('static', filename='img/marker.png') }}" style="height: 1.5rem"/> &nbsp;/&nbsp; en <img src="{{ url_for('static', filename='img/marker_white.png') }}" style="height: 1.5rem"/> </p>
 </div>
 
 <div id="rs-nav-background-wrapper">
@@ -25,11 +26,11 @@
 </div>
 
 <div id="rs-nav">
-    <svg class="rs-nav-line" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 761.89 777.74">
-        <path d="M1.5,35.25s4.37,3.27,12.57,8.17"/>
-        <path d="M22.73,48.36C65.84,71.9,170.49,114.11,298.81,60.73,421.13,9.85,492.41-6.8,559.62,7.32S759.39,79,759.39,189.4,667.83,311.54,592.92,311.54,472.47,384,512.46,426.09C601.25,519.55,645,594.6,595.69,689.51c-24,46.24-64.69,68.83-123.8,76.82"/>
-        <path d="M466.93,767q-7.28.87-14.93,1.46"/>
-        <path class="rs-nav-dot" d="M451.78,759a9.4,9.4,0,1,0,10.06,8.69A9.4,9.4,0,0,0,451.78,759Z"/>
+    <svg class="rs-nav-line" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 761.89 775.05">
+        <path d="M1.5,32.57s4.37,3.28,12.57,8.17"/>
+        <path d="M22.73,45.69c43.11,23.53,147.76,65.75,276.08,12.37C421.13,7.18,491.33-2.67,559.62,4.65,665.1,16,759.68,76.27,759.39,186.73,759.1,299,673.67,300,639.1,399c-34.85,99.76,34,155-43.41,287.89-26.21,45-65.23,68.47-123.8,76.73"/>
+        <path d="M466.93,764.23q-7.28.9-14.93,1.51"/>
+        <path class="rs-nav-dot" d="M451.77,756.28A9.4,9.4,0,1,0,461.84,765,9.4,9.4,0,0,0,451.77,756.28Z"/>
     </svg>
     <a id="rs-nav-home" class="rs-logo" href="/"><img src="{{ url_for('static', filename='img/logo.svg') }}"/></a>
     <div class="rs-nav-wrapper">
@@ -39,7 +40,7 @@
             <a id="rs-nav-steine" href="#">{{_('Alle')}} {{_('Steine')}}</a>
             <a id="rs-nav-geschichten" href="#">{{_('Alle')}} {{_('Geschichten')}}</a>
             <a id="rs-nav-fundorte" href="#">{{_('Alle')}} {{_('Fundorte')}}</a>
-            <a id="rs-nav-geologie" href="#">{{_('Alle')}} {{_('Gesteinsarten')}}</a>
+            <a id="rs-nav-geologie" href="#">{{_('Alle')}} {{_('Gesteine')}}</a>
         </div>
 
         <div class="rs-nav-impressum">
@@ -51,8 +52,5 @@
         <svg id="rs-nav-close" xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 48 48">
             <path d="M38 12.83l-2.83-2.83-11.17 11.17-11.17-11.17-2.83 2.83 11.17 11.17-11.17 11.17 2.83 2.83 11.17-11.17 11.17 11.17 2.83-2.83-11.17-11.17z"/>
         </svg>
-        <span>
-            <a id="rs-nav-de" href="/de">de</a> / <a id="rs-nav-en" href="/en">en</a>
-        </span>
     </div>
 </div>
