fix: final bugfixes (hopefully)

--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -42,32 +42,28 @@
             {{_('Werden Sie auch immer wieder von Reiselust gepackt und der Sehnsucht, in die Welt hinauszuziehen? Reisen Sie mit Ihren Steinen ans Ende der Welt oder in Ihren Vorgarten. Die Ausstellung ist eine virtuelle Sammlung Ihrer Lieblingssteine von irgendwo auf der Welt und Ihrer Geschichte, die Sie damit verbinden. Entdecken Sie in der Ausstellung mehr über unsere gemeinsam erstellte Steinsammlung, ihre Fundorte und lernen Sie die damit verbundenen persönlichen und geologischen Geschichten kennen.')}}
         </p>
         <p>
-            {{_('Die Idee zur Ausstellung basiert auf dem Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan und wurde von <i>focus</i>&#8239;Terra weiterentwickelt. Die Umsetzung erfolgte gemeinsam mit Marion Deichmann und Nicolas Schmid.')}} 
-        </p>
-        <p>
             <b>{{_('Konzeptentwicklerin, Herausgeberin & Redaktion:')}}</b> <a href="https://focusterra.ethz.ch" target="_blank"><i>focus</i>&#8239;Terra</a><br/>
             <b>{{_('Gestaltung & technische Umsetzung:')}}</b> <a href="{{ url_for('reisesteine.marion') }}">Marion Deichmann</a> und <a href="{{ url_for('reisesteine.nicolas') }}">Nicolas Schmid</a>
+        </p>
+        <p style="font-size: smaller">
+            {{_('Die Ausstellung wurde inspiriert durch das Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan.')}} 
         </p>
         <p class="rs-about-logos">
             <a href="https://ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/eth_logo.svg') }} "/></a>
             <a href="https://focusterra.ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/focusTerra_logo.svg') }} "/></a>
         </p>
         <p>
-            <a href="https://focusterra.ethz.ch/footer/copyright.html" target="_blank">© 2020, focusTerra – ETH Zürich</a>
+            <a href="https://focusterra.ethz.ch/footer/copyright.html" target="_blank">© 2020, <i>focus</i>&#8239;Terra – ETH Zürich</a>
         </p>
         <p class="rs-copyright">
-            {{_('Copyright
-            Diese Webseite sowie ihre Teile sind urheberrechtlich geschützt und dürfen nur zum privaten, wissenschaftlichen und nicht gewerblichen Gebrauch kopiert und ausgedruckt werden. 
-            Ohne vorgängige schriftliche Erlaubnis von focusTerra – ETH Zürich dürfen die Webseite sowie ihre Teile weder vervielfältigt noch auf anderen Servern gespeichert, in Newsgroups oder Online-Dienste eingespeist oder auf einer CD-ROM oder anderen Datenträgern gespeichert werden. Dies gilt insbesondere für das Logo von focusTerra. Die Zwischenspeicherung in einem Cache oder auf einem Proxy-Server zur Optimierung der Zugriffsgeschwindigkeit ist gestattet.')}}
+            {{_('Diese Webseite sowie ihre Teile sind urheberrechtlich geschützt und dürfen nur zum privaten, wissenschaftlichen und nicht gewerblichen Gebrauch kopiert und ausgedruckt werden. Ohne vorgängige schriftliche Erlaubnis von <i>focus</i>&#8239;Terra – ETH Zürich dürfen die Webseite sowie ihre Teile weder vervielfältigt noch auf anderen Servern gespeichert, in Newsgroups oder Online-Dienste eingespeist oder auf einer CD-ROM oder anderen Datenträgern gespeichert werden. Dies gilt insbesondere für das Logo der ETH Zürich sowie das Logo von <i>focus</i>&#8239;Terra. Die Zwischenspeicherung in einem Cache oder auf einem Proxy-Server zur Optimierung der Zugriffsgeschwindigkeit ist gestattet.')}}
             <br><br>
-            {{_('Das Zitieren der Webseiteninhalte unter korrekten Quellenangaben sowie das Setzen von Links auf unsere Website ist ausdrücklich erlaubt.')}}
-            <br><br>
-            {{_('Die Urheberrechte sind nicht übertragbar.')}}
+            {{_('Das Zitieren der Webseiteninhalte unter korrekten Quellenangaben sowie das Setzen von Links auf unsere Website sind ausdrücklich erlaubt.')}}
         </p>
     </div>
 </div>
 
-<div id="rs-site-content" style="margin-left: 150px;">^
+<div id="rs-site-content" style="margin-left: 150px;">
     <div id="rs-stein-site-content">
     </div>
     <div id="rs-stein-site-index">
