--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
@@ -1,1 +1,17 @@
-your stone has been published
+{{_('Liebe/r Reisefreund/in')}}
+<br/><br/>
+{{_('Dein Stein ist nun Teil unserer Reisesteinsammlung und auf unserer Weltkarte zu finden')}} (<a href="www.reisesteine.ethz.ch">www.reisesteine.ethz.ch</a>).
+<br/><br/>
+{{_('Herzliche Grüsse')}},<br/>
+{{_('Die focusTerra-Reiseleitung')}}<br/>
+------------------------------------------------<br/>
+ETH Zürich<br/>
+<i>focus</i>Terra<br/>
+Sonneggstrasse 5<br/>
+8092 Zürich<br/>
+Tel. +41 44 632 62 81<br/>
+info_focusterra@erdw.ethz.ch  <br/>
+<a href="www.focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
+<br/>
+{{_('Wir sind auch auf facebook zu finden!')}}<br/>
+<a href="www.facebook.com/focusTerra">www.facebook.com/focusTerra</a>
