--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
@@ -1,1 +1,17 @@
-Your stone has been submitted
+{{_('Liebe/r Reisefreund/in')}}
+<br/><br/>
+{{_('Vielen Dank für Deinen Stein. Er ist bei uns gut angekommen. Wir informieren Dich, sobald er online ist.')}}
+<br/><br/>
+{{_('Herzliche Grüsse')}},<br/>
+{{_('Die focusTerra-Reiseleitung')}}<br/>
+------------------------------------------------<br/>
+ETH Zürich<br/>
+<i>focus</i>Terra<br/>
+Sonneggstrasse 5<br/>
+8092 Zürich<br/>
+Tel. +41 44 632 62 81<br/>
+info_focusterra@erdw.ethz.ch  <br/>
+<a href="www.focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
+<br/>
+{{_('Wir sind auch auf facebook zu finden!')}}<br/>
+<a href="www.facebook.com/focusTerra">www.facebook.com/focusTerra</a>
