--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -8,7 +8,7 @@
 <div id="rs-title">
     <p>{{_('Reisesteine')}}</p>
     <p>{{_('Eine')}} <b><i>focus</i>&#8239;Terra</b>-Ausstellung zum Mitmachen</p>
-    <p style="margin-top: 10px">de <img src="{{ url_for('static', filename='img/marker.png') }}" style="height: 1.5rem"/> &nbsp;/&nbsp; en <img src="{{ url_for('static', filename='img/marker_white.png') }}" style="height: 1.5rem"/> </p>
+    <p style="margin-top: 10px"><img src="{{ url_for('static', filename='img/marker.png') }}" style="height: 1.5rem"/> de  &nbsp;/&nbsp; <img src="{{ url_for('static', filename='img/marker_white.png') }}" style="height: 1.5rem"/> en</p>
 </div>
 
 <div id="rs-nav-background-wrapper">
@@ -40,7 +40,7 @@
             <a id="rs-nav-steine" href="#">{{_('Alle')}} {{_('Steine')}}</a>
             <a id="rs-nav-geschichten" href="#">{{_('Alle')}} {{_('Geschichten')}}</a>
             <a id="rs-nav-fundorte" href="#">{{_('Alle')}} {{_('Fundorte')}}</a>
-            <a id="rs-nav-geologie" href="#">{{_('Alle')}} {{_('Gesteine')}}</a>
+            <a id="rs-nav-geologie" href="#">{{_('Alle')}} {{_('Gesteinstypen')}}</a>
         </div>
 
         <div class="rs-nav-impressum">
