--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -7,7 +7,7 @@
 
 <div id="rs-title">
     <p>{{_('Reisesteine')}}</p>
-    <p>{{_('Eine')}} <b><i>focus</i>&#8239;Terra</b>-Ausstellung zum Mitmachen</p>
+    <p>{{_('Eine <b><i>focus</i>&#8239;Terra</b>-Ausstellung zum Mitmachen')}}</p>
     <p style="margin-top: 10px"><img src="{{ url_for('static', filename='img/marker.png') }}" style="height: 1.5rem"/> de  &nbsp;/&nbsp; <img src="{{ url_for('static', filename='img/marker_white.png') }}" style="height: 1.5rem"/> en</p>
 </div>
 
