--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -49,7 +49,7 @@
             {{_('Die Ausstellung wurde inspiriert durch das Projekt «Nowhere – Die Spur der Steine» von Anna Sullivan.')}} 
         </p>
         <p class="rs-about-logos">
-            <a href="https://ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/eth_logo.svg') }} "/></a>
+            <a href="https://ethz.ch" target="_blank"><img id="rs-eth-logo" src=" {{ url_for('static', filename='img/eth_logo.svg') }} "/></a>
             <a href="https://focusterra.ethz.ch" target="_blank"><img src=" {{ url_for('static', filename='img/focusTerra_logo.svg') }} "/></a>
         </p>
         <p>
