chores: translations and gtag

--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
@@ -3,7 +3,7 @@
 {{_('Dein Stein ist nun Teil unserer Reisesteinsammlung und auf unserer Weltkarte zu finden')}} (<a href="www.reisesteine.ethz.ch">www.reisesteine.ethz.ch</a>).
 <br/><br/>
 {{_('Herzliche Grüsse')}},<br/>
-{{_('Die focusTerra-Reiseleitung')}}<br/>
+{{_('Die <i>focus</i>&#8239;Terra-Reiseleitung')}}<br/>
 ------------------------------------------------<br/>
 ETH Zürich<br/>
 <i>focus</i>Terra<br/>
