--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
@@ -3,7 +3,7 @@
 {{_('Vielen Dank für Deinen Stein. Er ist bei uns gut angekommen. Wir informieren Dich, sobald er online ist.')}}
 <br/><br/>
 {{_('Herzliche Grüsse')}},<br/>
-{{_('Die focusTerra-Reiseleitung')}}<br/>
+{{_('Die <i>focus</i>&#8239;Terra-Reiseleitung')}}<br/>
 ------------------------------------------------<br/>
 ETH Zürich<br/>
 <i>focus</i>Terra<br/>
