--- a/project/blueprints/reisesteine/templates/reisesteine/danke.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/danke.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block metadescription %}
-{{_('Haben Sie auf Ihrer Reisen einen Stein gefunden, den Sie interessant finden oder der Sie einfach an Ihre Reise oder ein Ereignis erinnert? Dann machen Sie mit!')}}
+{{_('Ihr Reisestein wurde erfolgreich erfasst. Wir werden Sie kontaktieren, sobald wir den Stein bearbeitet und online gestellt haben.')}}
 {% endblock %}
 
 {% block canonical %}
@@ -26,7 +26,7 @@
 <div class="container mt-3 pt-3">
     <h1>{{_('Vielen Dank')}}</h1>
     <p>
-        {{_('Ihr Reisestein wurde erfolgreich erfasst. Wir werden Sie kontaktieren sobald wir den Stein bearbeitet und online gestellt haben.')}}
+        {{_('Ihr Reisestein wurde erfolgreich erfasst. Wir werden Sie kontaktieren, sobald wir den Stein bearbeitet und online gestellt haben.')}}
     </p>
     <a href="{{ url_for('reisesteine.mitmachen') }}"><h4>> {{_('Weiteren Stein einsenden')}}</h4></a>
     <a href="{{ url_for('reisesteine.index') }}"><h4>> {{_('Zurück zur Übersicht')}}</h4></a>
