--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -2,6 +2,16 @@
 <html lang={{g.lang_code}}>
 
     <head profile="http://www.w3.org/2005/10/profile">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173558613-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-173558613-1');
+        </script>
+
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="{% block metadescription %}{% endblock %}">
