fix: small navigation fixes, 404, production build js

--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -1,1 +1,3 @@
-<h1>did not find it</h1>
+<h1>{{ _('404 - Seite nicht gefunden') }}</h1>
+
+<h3>{{_('Zurück zu unserer ')}}<a href="{{ url_for('reisesteine.index') }}">home page</a></h3>
