fix: version css and js files for reload

--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -16,7 +16,7 @@
         
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"></script>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/backend.css') }}"></script> 
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/backend.css', version='1.0') }}"></script> 
     </head>
 
     <body class="rs-backend"> 
