--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -201,11 +201,17 @@ h4.active {
 .rs-content .rs-coordinates {
     position: absolute;
     top: 20vh;
-    left: 63vw;
-    width: 25vw;
+    left: 61vw;
+    width: 24vw;
     padding-top: 18vw;
     z-index: 3;
     text-align: center;
+}
+
+@media only screen and (min-width: 1025px) and (max-height: 650px){
+    .rs-content .rs-coordinates h2 {
+        font-size: 2.2rem;
+    }
 }
 
 .rs-content .rs-bild-wrapper {
@@ -425,6 +431,13 @@ h4.active {
 @media only screen and (max-width: 1025px) {
     .rs-footer {
         display: none;
+    }
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .rs-footer {
+        right: -100px;
     }
 }
 
